# EasyLoRAMerger

./: .gitignore  LICENSE  Quick Start Guide.md  Quick_Start_Guide.md  README.md  __init__.py  baker_node.py  checkpoint_merger_node.py  comfyui.json  config.py  easy_lora_merger.py  easy_text_display.py  klein_normalizer.py  methods.py  pyproject.toml  requirements.txt  triple_merger_node.py  utils.py  validation.py
engine/: __init__.py  _merge_kernels.py  baking_processor.py  baking_processor_baking.py  baking_processor_constants.py  baking_processor_delta.py  baking_processor_matching.py  baking_processor_sd15.py  checkpoint_methods.py  checkpoint_normalizer.py  checkpoint_weaver.py  component_combiner.py  component_extractor.py  component_merger.py  diffusers_bridge.py  forensics.py  fp8_quantizer.py  gguf_writer.py  identity_normalizer.py  int8_quantizer.py  key_mapper.py  key_utils.py  klein_normalizer.py  lora_extractor.py  lora_studio_converter.py  merge_engine_v2.py  metadata_factory.py  methods.py  musubi_checkpoint_studio.py  scale_utils.py  serialization_factory.py  svd_quantizer.py  triple_forensics.py  triple_merge_core.py  triple_methods.py
js/: easy_lora_merger.js
