[project]
name = "comfyui-easy-lora-merger"
description = "A versatile LoRA merger for Flux (4B/9B/Dev), Z-Image, and SDXL. Features cross-architecture scaling, weight normalization, and live model baking."
version = "1.0.0"
license = {text = "MIT"}
authors = [
    {name = "Terpentinas"}
]
readme = "README.md"

[project.urls]
Repository = "https://github.com/Terpentinas/EasyLoRAMerger"

[tool.comfyui]
display_name = "Easy LoRA Merger"
author = "Terpentinas"
category = "model_merging/lora"